--- a/cvt_ros/cfg/ChameleonSettings.cfg
+++ b/cvt_ros/cfg/ChameleonSettings.cfg
@@ -16,12 +16,15 @@ gen.add("exposure_mode", int_t, 0, "Exposure Control Mode", 1, 0, 2, edit_method
 gen.add("gain_mode", int_t, 0, "Gain Control Mode", 1, 0, 2, edit_method=mode_enum)
 gen.add("white_balance_mode", int_t, 0, "White-Bal. Mode", 0, 0, 2, edit_method=mode_enum )
 gen.add("shutter_value", double_t, 0, "Shutter Time (ms)", 5.0, 0.0, 200.0 )
-gen.add("exposure_value", double_t, 0, "Exposure Value (IL)",0.8, -2.0, 2.0)
+gen.add("exposure_value", double_t, 0, "Exposure Value (IL)",0.8, -7.0, 3.0)
 gen.add("gain_value", double_t, 0, "Gain Value (%)", 0.0, 0.0, 20.0)
 gen.add("white_balance_ub_value", int_t, 0, "White Balance Value (U-B)",160, 0, 1024)
 gen.add("white_balance_vr_value", int_t, 0, "White Balance Value (V-R)",160, 0, 1024)
 
-gen.add("useAutoShutter", bool_t, 0, "Automatic Shutter Regulation", False )
 gen.add("trigger", bool_t, 0, "Trigger a frame manually", False )
+gen.add("auto_exp", bool_t, 0, "Enable Auto Exposure Feature", False )
+gen.add("auto_wb", bool_t, 0, "Enable Auto Whitebalance Feature", False )
+gen.add("auto_shutter", bool_t, 0, "Enable Auto Shutter Feature", False )
+gen.add("auto_gain", bool_t, 0, "Enable Auto Gain Feature", False )
 
 exit(gen.generate(PACKAGE, "chameleon_stereo", "ChameleonSettings"))
