--- a/cvt_ros/cfg/ChameleonSettings.cfg
+++ b/cvt_ros/cfg/ChameleonSettings.cfg
@@ -27,4 +27,10 @@ gen.add("auto_wb", bool_t, 0, "Enable Auto Whitebalance Feature", False )
 gen.add("auto_shutter", bool_t, 0, "Enable Auto Shutter Feature", False )
 gen.add("auto_gain", bool_t, 0, "Enable Auto Gain Feature", False )
 
+gen.add("roi_pos_x", int_t, 0, "Region of Interest x position", 0, 0, 1296)
+gen.add("roi_pos_y", int_t, 0, "Region of Interest y position", 0, 0, 964)
+gen.add("roi_width", int_t, 0, "Region of Interest width", 0, 0, 1296)
+gen.add("roi_height", int_t, 0, "Region of Interest width", 0, 0, 964)
+gen.add("packet_size", int_t, 0, "Packet Size", 2684, 0, 2928)
+
 exit(gen.generate(PACKAGE, "chameleon_stereo", "ChameleonSettings"))
