--- a/cvt_ros/cfg/ChameleonSettings.cfg
+++ b/cvt_ros/cfg/ChameleonSettings.cfg
@@ -10,27 +10,37 @@ mode_enum = gen.enum([ gen.const("AUTO", int_t, 0, "Automatic mode"),
 					   gen.const("ONE_PUSH_AUTO", int_t, 2, "One Push Automatic mode"), 
 					   ],
 					   "An enum to set feature modes")
+preset_enum = gen.enum([ 
+					     gen.const("FACTORY", int_t, 0, "Factory Presets"), 
+                         gen.const("USER_0", int_t, 1, "User Preset 0"), 
+					     gen.const("USER_1", int_t, 2, "User Preset 1"), 
+					   ],
+					   "An enum for the internal config presets")
 
 gen.add("shutter_mode", int_t, 0, "Shutter Control Mode", 1, 0, 2, edit_method=mode_enum)
 gen.add("exposure_mode", int_t, 0, "Exposure Control Mode", 1, 0, 2, edit_method=mode_enum)
-gen.add("gain_mode", int_t, 0, "Gain Control Mode", 1, 0, 2, edit_method=mode_enum)
-gen.add("white_balance_mode", int_t, 0, "White-Bal. Mode", 0, 0, 2, edit_method=mode_enum )
-gen.add("shutter_value", double_t, 0, "Shutter Time (ms)", 5.0, 0.0, 200.0 )
-gen.add("exposure_value", double_t, 0, "Exposure Value (IL)",0.8, -7.0, 3.0)
+gen.add("gain_mode", int_t, 0, "Gain Control Mode", 0, 0, 2, edit_method=mode_enum)
+#gen.add("white_balance_mode", int_t, 0, "White-Bal. Mode", 0, 0, 2, edit_method=mode_enum )
+gen.add("shutter_value", double_t, 0, "Shutter Time (ms)", 7.0, 0.0, 200.0 )
+gen.add("exposure_value", double_t, 0, "Exposure Value (IL)",0.9, -7.0, 3.0)
 gen.add("gain_value", double_t, 0, "Gain Value (%)", 0.0, 0.0, 20.0)
-gen.add("white_balance_ub_value", int_t, 0, "White Balance Value (U-B)",160, 0, 1024)
-gen.add("white_balance_vr_value", int_t, 0, "White Balance Value (V-R)",160, 0, 1024)
+gen.add("white_balance_ub_value", int_t, 0, "White Balance Value (U-B)",550, 0, 1024)
+gen.add("white_balance_vr_value", int_t, 0, "White Balance Value (V-R)",820, 0, 1024)
 
 gen.add("trigger", bool_t, 0, "Trigger a frame manually", False )
 gen.add("auto_exp", bool_t, 0, "Enable Auto Exposure Feature", False )
 gen.add("auto_wb", bool_t, 0, "Enable Auto Whitebalance Feature", False )
 gen.add("auto_shutter", bool_t, 0, "Enable Auto Shutter Feature", False )
-gen.add("auto_gain", bool_t, 0, "Enable Auto Gain Feature", False )
+gen.add("auto_gain", bool_t, 0, "Enable Auto Gain Feature", True )
 
-gen.add("roi_pos_x", int_t, 0, "Region of Interest x position", 0, 0, 1296)
-gen.add("roi_pos_y", int_t, 0, "Region of Interest y position", 0, 0, 964)
-gen.add("roi_width", int_t, 0, "Region of Interest width", 0, 0, 1296)
-gen.add("roi_height", int_t, 0, "Region of Interest width", 0, 0, 964)
-gen.add("packet_size", int_t, 0, "Packet Size", 2684, 0, 2928)
+#gen.add("roi_pos_x", int_t, 0, "Region of Interest x position", 0, 0, 1296)
+#gen.add("roi_pos_y", int_t, 0, "Region of Interest y position", 0, 0, 964)
+#gen.add("roi_width", int_t, 0, "Region of Interest width", 0, 0, 1296)
+#gen.add("roi_height", int_t, 0, "Region of Interest width", 0, 0, 964)
+gen.add("left_packet_size", int_t, 0, "Packet Size", 2440, 0, 2928)
+gen.add("right_packet_size", int_t, 0, "Packet Size", 2660, 0, 2928)
+
+#gen.add("use_preset", bool_t, 0, "Use the defined preset", False )
+#gen.add("preset", int_t, 0, "Preset", 1, 0, 2, edit_method=preset_enum )
 
 exit(gen.generate(PACKAGE, "chameleon_stereo", "ChameleonSettings"))
