--- a/cvt_ros/package.xml
+++ b/cvt_ros/package.xml
@@ -35,6 +35,7 @@
   <build_depend>tf2_ros</build_depend>
   <run_depend>cvt_ros_bridge</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>image_transport</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
