--- a/cvt_ros/CMakeLists.txt
+++ b/cvt_ros/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package( Boost REQUIRED COMPONENTS thread signals )
 add_definitions( -DBOOST_SIGNALS_NO_DEPRECATION_WARNING )
 set( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2" )
 
-find_package( CVT_DEBUG REQUIRED )
+find_package( CVT REQUIRED )
 
 include_directories(
     include
@@ -46,7 +46,7 @@ catkin_package(
    INCLUDE_DIRS include
    LIBRARIES cvt_ros
    CATKIN_DEPENDS cvt_ros_bridge roscpp #dynamic_reconfigure
-   DEPENDS CVT_DEBUG
+   DEPENDS CVT
 )
 
 
