removing non necessary code
if a subclass really needs the ros messages or infos, it should
override the respective methods

	modified:   cvt_ros/include/cvt_ros/StereoSubscriber.h
	modified:   cvt_ros/src/lib/StereoSubscriber.cpp
	modified:   cvt_ros_bridge/CMakeLists.txt

--- a/cvt_ros_bridge/CMakeLists.txt
+++ b/cvt_ros_bridge/CMakeLists.txt
@@ -55,7 +55,10 @@ include_directories(
 )
 
 ## Declare a cpp executable
-add_executable( convert_stereo_calib src/convert_stereo_calib.cpp )
+add_executable( convert_stereo_calib
+                src/convert_stereo_calib.cpp
+                include/cvt_ros_bridge/cvt_ros_bridge.h
+)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
