--- a/cvt_ros/package.xml
+++ b/cvt_ros/package.xml
@@ -32,6 +32,7 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>camera_info_manager</build_depend>
+  <build_depend>camera_calibration_parsers</build_depend>
   <build_depend>tf2_ros</build_depend>
   <run_depend>cvt_ros_bridge</run_depend>
   <run_depend>roscpp</run_depend>
